--- a/Pages/Settings.xaml
+++ b/Pages/Settings.xaml
@@ -202,7 +202,7 @@
                 </Border>
             </TabItem>
 
-<!-- Profile Tab -->
+
             <!-- Profile Tab -->
             <TabItem Header="Profile" Style="{DynamicResource TabItemStyle}" BorderBrush="#DDD" BorderThickness="1">
                 <Border BorderBrush="#DDD" BorderThickness="1" CornerRadius="10">
@@ -340,11 +340,11 @@
                     <!-- Main Content -->
                     <StackPanel Margin="0,30,0,0">
                         <TextBlock Text="Add Book" FontWeight="Bold" FontSize="18" Margin="0,0,0,10" TextAlignment="Center" />
-                        <TextBox Text="{Binding NewGenre.GenreName}" Margin="0,5"  />
+                        <TextBox Text="{Binding NewGenre.GenreName, UpdateSourceTrigger=PropertyChanged}" Margin="0,5" />
 
                         <!-- Buttons -->
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-                            <Button Content="Save" Command="{Binding AddGenreCommand}" IsEnabled="{Binding AddGenreCommand.CanExecute, Mode=OneWay}" Margin="5,0" Style="{StaticResource PrimaryButtonStyle}"/>
+                            <Button Content="Genre Save" Command="{Binding AddGenreCommand}" IsEnabled="{Binding AddGenreCommand.CanExecute, Mode=OneWay}" Margin="5,0" Style="{StaticResource PrimaryButtonStyle}"/>
                             <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="5,0" Style="{StaticResource SecondaryButtonStyle}"/>
                         </StackPanel>
                     </StackPanel>
