--- a/Pages/Members.xaml
+++ b/Pages/Members.xaml
@@ -126,7 +126,7 @@
         </DataGrid>
 
         <Popup IsOpen="{Binding IsEditPopupOpen}" Placement="Center" StaysOpen="True" DataContext="{Binding}">
-            <Border Background="White" Padding="20" CornerRadius="10" Width="400" Height="300" >
+            <Border Background="White" Padding="20" BorderBrush="Black" BorderThickness="1" Width="400" Height="300" >
                 <Grid>
                     <!-- Close Icon -->
                     <Button Content="✖" 
@@ -143,9 +143,12 @@
 
                     <!-- Main Content -->
                     <StackPanel Margin="0,30,0,0">
-                        <TextBlock Text="Edit Book" FontWeight="Bold" FontSize="18" Margin="0,0,0,10" TextAlignment="Center" />
-                        <TextBox Text="{Binding SelectedMember.Name}" Margin="0,5"  />
-                        <TextBox Text="{Binding SelectedMember.ContactInfo}" Margin="0,5"  />
+                        
+                        <TextBlock Text="Edit Member" FontWeight="Bold" FontSize="18" Margin="0,0,0,10" TextAlignment="Center" />
+                        <TextBlock Text="Name:" FontSize="14" FontWeight="SemiBold" Margin="0,5" />
+                        <TextBox Text="{Binding SelectedMember.Name}" Margin="0,5" FontSize="18" Padding="10,5"  />
+                        <TextBlock Text="Contact Email:" FontWeight="SemiBold" Margin="0,5" FontSize="14" />
+                        <TextBox Text="{Binding SelectedMember.ContactInfo}" Margin="0,5" FontSize="18" Padding="10,5"  />
 
                         <!-- Buttons -->
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
@@ -159,8 +162,8 @@
 
         <!-- Add Member Popup -->
         <Popup IsOpen="{Binding IsAddPopupOpen}" Placement="Center" StaysOpen="True" DataContext="{Binding}">
-            <Border Background="White" Padding="20" CornerRadius="10" Width="450" Height="Auto" 
-            BorderBrush="LightGray" BorderThickness="1">
+            <Border Background="White" Padding="20" Width="450" Height="Auto" 
+            BorderBrush="Black" BorderThickness="1">
                     <Grid>
                         <!-- Close Icon -->
                         <Button Content="✖" 
@@ -178,7 +181,7 @@
                     <!-- Main Content -->
                     <StackPanel Margin="10">
                         <!-- Popup Title -->
-                        <TextBlock Text="Add Book Details" 
+                        <TextBlock Text="Add Member Details" 
                       FontWeight="Bold" 
                       FontSize="20" 
                       TextAlignment="Center" 
@@ -186,18 +189,18 @@
 
                         <!-- Input Fields -->
                         <StackPanel Margin="0,10,0,0">
-                            <TextBlock Text="Book Title:" FontWeight="SemiBold" Margin="0,5" />
-                            <TextBox Text="{Binding NewMember.Name, UpdateSourceTrigger=PropertyChanged}" Margin="0,5" />
+                            <TextBlock Text="Name:" FontSize="14" FontWeight="SemiBold" Margin="0,5" />
+                            <TextBox Text="{Binding NewMember.Name, UpdateSourceTrigger=PropertyChanged}" Margin="0,5" FontSize="18" Padding="10,5"/>
 
-                            <TextBlock Text="Author:" FontWeight="SemiBold" Margin="0,5" />
-                            <TextBox Text="{Binding NewMember.ContactInfo,UpdateSourceTrigger=PropertyChanged}" Margin="0,5" />
+                            <TextBlock Text="Contact Email:" FontWeight="SemiBold" Margin="0,5" FontSize="14" />
+                            <TextBox Text="{Binding NewMember.ContactInfo,UpdateSourceTrigger=PropertyChanged}" Margin="0,5" FontSize="18" Padding="10,5" />
 
                         </StackPanel>
 
                         <!-- Buttons -->
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-                            <Button Content="Add Book" Command="{Binding AddMemberCommand}" IsEnabled="{Binding AddMemberCommand.CanExecute, Mode=OneWay}"/>
-                            <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="5,0" />
+                            <Button Content="Add Book" Command="{Binding AddMemberCommand}" IsEnabled="{Binding AddMemberCommand.CanExecute, Mode=OneWay}" Style="{StaticResource PrimaryButtonStyle}"/>
+                            <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="5,0" Style="{StaticResource PrimaryButtonStyle}" />
                         </StackPanel>
                     </StackPanel>
                 </Grid>
