--- a/Pages/Members.xaml
+++ b/Pages/Members.xaml
@@ -150,7 +150,7 @@
                         <TextBlock Text="Contact Email:" FontWeight="SemiBold" Margin="0,5" FontSize="14" />
                         <TextBox Text="{Binding SelectedMember.ContactInfo}" Margin="0,5" FontSize="18" Padding="10,5"  />
 
-                        <!-- Buttons -->
+                      
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
                             <Button Content="Save" Command="{Binding UpdateMemberCommand}" Margin="5,0" Style="{StaticResource PrimaryButtonStyle}"/>
                             <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="5,0" Style="{StaticResource SecondaryButtonStyle}"/>
@@ -180,14 +180,14 @@
 
                     <!-- Main Content -->
                     <StackPanel Margin="10">
-                        <!-- Popup Title -->
+                   
                         <TextBlock Text="Add Member Details" 
                       FontWeight="Bold" 
                       FontSize="20" 
                       TextAlignment="Center" 
                       Margin="0,0,0,15" />
 
-                        <!-- Input Fields -->
+        
                         <StackPanel Margin="0,10,0,0">
                             <TextBlock Text="Name:" FontSize="14" FontWeight="SemiBold" Margin="0,5" />
                             <TextBox Text="{Binding NewMember.Name, UpdateSourceTrigger=PropertyChanged}" Margin="0,5" FontSize="18" Padding="10,5"/>
@@ -197,9 +197,9 @@
 
                         </StackPanel>
 
-                        <!-- Buttons -->
+                       
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-                            <Button Content="Add Book" Command="{Binding AddMemberCommand}" IsEnabled="{Binding AddMemberCommand.CanExecute, Mode=OneWay}" Style="{StaticResource PrimaryButtonStyle}"/>
+                            <Button Content="Add Member" Command="{Binding AddMemberCommand}" IsEnabled="{Binding AddMemberCommand.CanExecute, Mode=OneWay}" Style="{StaticResource PrimaryButtonStyle}"/>
                             <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="5,0" Style="{StaticResource PrimaryButtonStyle}" />
                         </StackPanel>
                     </StackPanel>
